# APNG

./: .clang-tidy  .gitignore  .travis.yml  Makefile  Makefile.inc  README.md  apng.hxx  build32.sh  build64.sh  buildDebian64.sh  conversions.cxx  crc32.cxx  crc32.hxx  internals.hxx  libAPNG.pc.in  meson.build  reader.cxx  stream.cxx  stream.hxx  testAPNG.cxx  testCRC32.cxx  testRead.cxx  utilities.hxx
draw/: .gitignore  drawAPNG.cxx  drawAPNG.hxx  drawAPNG.pro  drawAPNG.ui
